[gd_scene load_steps=8 format=2]

[ext_resource path="res://resources/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/Settings/Settings.gd" type="Script" id=2]
[ext_resource path="res://assets/icons/arrow.svg" type="Texture" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.219608, 0.219608, 0.219608, 1 )
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color( 0.388235, 0.388235, 0.388235, 1 )
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.113725, 0.117647, 0.14902, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.729412, 0.729412, 0.729412, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.627451, 0.627451, 0.627451, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.729412, 0.729412, 0.729412, 1 )
corner_radius_top_right = 10
corner_radius_bottom_right = 10

[sub_resource type="StyleBoxFlat" id=3]
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.729412, 0.729412, 0.729412, 1 )
corner_radius_top_right = 10
corner_radius_bottom_right = 10

[node name="Settings" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
rect_pivot_offset = Vector2( -480, -48 )
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Back" type="Button" parent="."]
margin_left = 16.0
margin_top = 608.0
margin_right = 104.0
margin_bottom = 680.0
icon = ExtResource( 3 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hint" type="Label" parent="Back"]
margin_left = -24.0
margin_top = -48.0
margin_right = 120.0
margin_bottom = -9.0
text = "BACK"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Client" type="Panel" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 600.0
margin_bottom = 680.0
rect_pivot_offset = Vector2( 176, 240 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Client"]
anchor_left = 0.5
anchor_top = 0.187
anchor_right = 0.5
anchor_bottom = 0.187
margin_left = -56.0
margin_top = -152.2
margin_right = 59.0
margin_bottom = -113.2
text = "CLIENT SIDE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowFps" type="CheckButton" parent="Client"]
margin_left = 32.0
margin_top = 48.0
margin_right = 448.0
margin_bottom = 95.0
text = "SHOW FPS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="CheckButton" parent="Client"]
margin_left = 32.0
margin_top = 120.0
margin_right = 448.0
margin_bottom = 167.0
pressed = true
text = "Music"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScreenSize" type="Panel" parent="Client"]
margin_left = 32.0
margin_top = 184.0
margin_right = 448.0
margin_bottom = 247.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="OptionButton" type="OptionButton" parent="Client/ScreenSize"]
margin_left = 224.0
margin_right = 416.0
margin_bottom = 63.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
toggle_mode = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Client/ScreenSize"]
margin_left = 8.0
margin_top = 8.0
margin_right = 216.0
margin_bottom = 56.0
text = "SCREEN SIZE"
valign = 1

[node name="Server" type="Panel" parent="."]
margin_left = 672.0
margin_top = 80.0
margin_right = 1152.0
margin_bottom = 680.0
rect_pivot_offset = Vector2( 176, 240 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Server"]
margin_left = 32.0
margin_top = -40.0
margin_right = 448.0
margin_bottom = -1.0
text = "SERVER"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Respawn" type="CheckButton" parent="Server"]
margin_left = 32.0
margin_top = 48.0
margin_right = 448.0
margin_bottom = 95.0
pressed = true
text = "RESPAWN AFTER DEATH"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChillMode" type="CheckButton" parent="Server"]
margin_left = 32.0
margin_top = 120.0
margin_right = 448.0
margin_bottom = 167.0
text = "Chill mode"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GPA" type="Panel" parent="Server"]
margin_left = 32.0
margin_top = 184.0
margin_right = 448.0
margin_bottom = 248.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Server/GPA"]
margin_left = 336.0
margin_top = 8.0
margin_right = 408.0
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Server/GPA"]
margin_left = 8.0
margin_top = 14.0
margin_right = 320.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 96, 26 )
text = "GROW PER APPLE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SnakeSize" type="Panel" parent="Server"]
margin_left = 32.0
margin_top = 256.0
margin_right = 448.0
margin_bottom = 320.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Server/SnakeSize"]
margin_left = 336.0
margin_top = 8.0
margin_right = 408.0
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Server/SnakeSize"]
margin_left = 8.0
margin_top = 14.0
margin_right = 320.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 96, 26 )
text = "SNAKE SIZE"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="toggled" from="Client/ShowFps" to="." method="_on_ShowFps_toggled"]
[connection signal="toggled" from="Client/Music" to="." method="_on_Music_toggled"]
[connection signal="item_selected" from="Client/ScreenSize/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="toggled" from="Server/Respawn" to="." method="_on_Respawn_toggled"]
[connection signal="toggled" from="Server/ChillMode" to="." method="_on_ChillMode_toggled"]
[connection signal="focus_exited" from="Server/GPA/LineEdit" to="." method="_on_LineEdit_focus_exited"]
[connection signal="focus_exited" from="Server/SnakeSize/LineEdit" to="." method="_on_SnakeSize_LineEdit_focus_exited"]
